<resources>
    <string name="app_name">Video2Tutorial</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name_edit_text">Your Name</string>
    <string name="happy_question">Are you Happy?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="pickme">Pick Me!</string>
    <string name="nopickme">No Pick Me!</string>
</resources>
